[package]
name = "aloe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.0"
pest_derive = "2.7.0"
dialoguer = "0.10.4"

[lib]
name = "aloelib"
path = "src/lib.rs"

[[bin]]
name = "aloebin"
path = "src/bin.rs"
